fixed overflow issue on about me page

--- a/styles/AboutMe.module.css
+++ b/styles/AboutMe.module.css
@@ -82,6 +82,7 @@
   }
   .bio {
     height: 65%;
+    overflow: auto;
   }
 }
 
